--- a/css/form.css
+++ b/css/form.css
@@ -1,15 +1,3 @@
-body {
-	background-color: #f5f5f5;
-	font-family: helvetica;
-}
-h1 {
-	text-align: center;
-}
-table {
-	margin-left: auto;
-	margin-right: auto;
-	width: 90%;
-}
 table th,
 table td {
 	background-color: #ebebeb;
@@ -25,9 +13,13 @@ table tr:hover td {
 table tr td td {
 	text-align: center;
 }
-p {
-	margin-left: auto;
-	margin-right: auto;
+legend {
+	font-weight: bold;
+	border: none;
+}
+label {
 	padding-left: 2px;
-	width: 90%;
+}
+input.button {
+	margin-top: 10px;
 }
